feat: support editing scores
