# api-docs.yml
@@ -188,14 +188,14 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
-  /workouts/{id}:
+  /workouts/{workoutId}:
     get:
       summary: Returns a specific workout.
       operationId: getWorkoutById
       tags:
         - workouts
       parameters:
-        - name: id
+        - name: workoutId
           in: path
           required: true
           description: Workout identifier
@@ -203,19 +203,19 @@ paths:
             type: string
       responses:
         200:
-          description: Returns workout with {id}.
+          description: Returns the workout.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/workout"
         403:
-          description: Forbidden. User is not authorized to read workout with {id}.
+          description: Forbidden. User is not authorized to read the workout.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
         404:
-          description: Could not find the workout with {id}.
+          description: Could not find the workout.
           content:
             application/json:
               schema:
@@ -226,7 +226,7 @@ paths:
       tags:
         - workouts
       parameters:
-        - name: id
+        - name: workoutId
           in: path
           required: true
           description: Workout identifier
@@ -275,7 +275,7 @@ paths:
       tags:
         - workouts
       parameters:
-        - name: id
+        - name: workoutId
           in: path
           required: true
           description: Workout identifier
@@ -297,12 +297,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
     post:
-      summary: Creates a score for the workout with {id}.
+      summary: Creates a score for the workout.
       operationId: createWorkoutScore
       tags:
         - workouts
       parameters:
-        - name: id
+        - name: workoutId
           in: path
           required: true
           description: Workout identifier
@@ -322,13 +322,57 @@ paths:
               schema:
                 $ref: "#/components/schemas/workoutScore"
         403:
-          description: Forbidden. User is not authorized to create score for workout with {id}.
+          description: Forbidden. User is not authorized to create score for the workout.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
         404:
-          description: Could not find the workout with {id}.
+          description: Could not find the workout.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+  /workouts/{workoutId}/{workoutScoreId}:
+    patch:
+      summary: Updates a specific workout score.
+      operationId: updateWorkoutScoreById
+      tags:
+        - workouts
+      parameters:
+        - name: workoutId
+          in: path
+          required: true
+          description: Workout identifier
+          schema:
+            type: string
+        - name: workoutScoreId
+          in: path
+          required: true
+          description: Workout score identifier
+          schema:
+            type: string
+      responses:
+        200:
+          description: Score updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/workoutScore"
+        403:
+          description: Forbidden. User is not authorized to update workout score.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+        404:
+          description: Could not find the workout or workout score.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+        default:
+          description: Unexpected error.
           content:
             application/json:
               schema:
@@ -382,14 +426,14 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
-  /movements/{id}:
+  /movements/{movementId}:
     get:
       summary: Returns a specific movement.
       operationId: getMovementById
       tags:
         - movements
       parameters:
-        - name: id
+        - name: movementId
           in: path
           required: true
           description: Movement identifier
@@ -397,19 +441,19 @@ paths:
             type: string
       responses:
         200:
-          description: Returns movement with {id}.
+          description: Returns movement.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/movement"
         403:
-          description: Forbidden. User is not authorized to read movement with {id}.
+          description: Forbidden. User is not authorized to read the movement.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
         404:
-          description: Could not find the movement with {id}.
+          description: Could not find the movement.
           content:
             application/json:
               schema:
@@ -420,7 +464,7 @@ paths:
       tags:
         - movements
       parameters:
-        - name: id
+        - name: movementId
           in: path
           required: true
           description: Movement identifier
@@ -463,7 +507,7 @@ paths:
       tags:
         - movements
       parameters:
-        - name: id
+        - name: movementId
           in: path
           required: true
           description: Movement identifier
@@ -485,12 +529,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/error"
     post:
-      summary: Creates a score for the movement with {id}.
+      summary: Creates a score for the movement.
       operationId: createMovementScore
       tags:
         - movements
       parameters:
-        - name: id
+        - name: movementId
           in: path
           required: true
           description: Movement identifier
@@ -510,13 +554,57 @@ paths:
               schema:
                 $ref: "#/components/schemas/movementScore"
         403:
-          description: Forbidden. User is not authorized to create score for movement with {id}.
+          description: Forbidden. User is not authorized to create score for the movement.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
         404:
-          description: Could not find the movement with {id}.
+          description: Could not find the movement.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+  /movements/{movementId}/{movementScoreId}:
+    patch:
+      summary: Updates a specific movement score.
+      operationId: updateMovementScoreById
+      tags:
+        - movements
+      parameters:
+        - name: movementId
+          in: path
+          required: true
+          description: Movement identifier
+          schema:
+            type: string
+        - name: movementScoreId
+          in: path
+          required: true
+          description: Movement score identifier
+          schema:
+            type: string
+      responses:
+        200:
+          description: Score updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/movementScore"
+        403:
+          description: Forbidden. User is not authorized to update movement score.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+        404:
+          description: Could not find the movement or movement score.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
+        default:
+          description: Unexpected error.
           content:
             application/json:
               schema:
